/* English */ fi translation <quail pipe#16544389>

--- a/en/q/quail pipe.801802.wikitext
+++ b/en/q/quail pipe.801802.wikitext
@@ -1,7 +1,15 @@
 ==English==
+
 ===Noun===
 {{en-noun}}
-#A device used to imitate the sound of [[quail]]s.
+
+# A device used to imitate the sound of [[quail]]s.
+
+====Translations====
+{{trans-top|pipe to imitate quail}}
+* Finnish: {{t|fi|viiriäispilli}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ====See also====
 * [[quail-pipe]]
