t+wa:[[a]] t-balance ([[WT:EDIT|Assisted]]) <at#16553163>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -63,8 +63,8 @@ From {{etyl|enm}} {{term|at|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, 
 * Japanese: [[で]] (de), [[に]] (ni)
 * Korean: [[~에서]] (~eseo)
 * Kurdish: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
-{{trans-mid}}
 * Latin: ''[[dative case]]'', {{t|la|in}}
+{{trans-mid}}
 * Macedonian: {{t-|mk|во|tr=vo}}, {{t-|mk|на|tr=na}}, {{t-|mk|кај|tr=kaj}}
 * Navajo: {{tø|nv|-di}}, {{tø|nv|-gi}}
 * Norwegian: {{t+|no|på}}
@@ -89,6 +89,7 @@ From {{etyl|enm}} {{term|at|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, 
 * Thai: {{Thai|[[ณ]]}} (nā)
 * Turkish: {{t+|tr|-da}}, {{t+|tr|-de}}
 * Vietnamese: [[ở tại]], [[lúc]], [[vào]], [[ở]]
+* Walloon: {{t|wa|a}}
 * Welsh: {{t|cy|wrth|xs=Welsh}}, {{t+|cy|ger|xs=Welsh}}, {{t-|cy|yn|xs=Welsh}}
 {{trans-bottom}}
 
@@ -129,6 +130,7 @@ From {{etyl|enm}} {{term|at|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, 
 *: ''At five o’clock'' = klockan fem ''or'' vid fem {{qualifier|informal}}
 *: ''At midnight'' = vid midnatt
 * Volapük: {{t|vo|tü}}
+* Walloon: {{t|wa|a}}
 {{trans-bottom}}
 
 {{trans-top|in the direction of}}
@@ -148,8 +150,8 @@ From {{etyl|enm}} {{term|at|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, 
 * Interlingua: [[a#Interlingua|a]]
 * Irish: {{t-|ga|ag|xs=Irish}}
 * Italian: {{t+|it|a}}
-{{trans-mid}}
 * Japanese: [[に]] (ni), [[を]] (o)
+{{trans-mid}}
 * Korean: [[~에게]] (-ege)
 * Kurdish: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
 * Latin: {{t|la|ad}}
@@ -166,6 +168,7 @@ From {{etyl|enm}} {{term|at|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, 
 *: Han kastade sten mot mig = ''He threw stones at (=towards) me''
 *: Han kastade sten på mig = ''He threw stones at me'' (''...and hit me'')
 * Thai: {{Thai|[[ณ]]}} (nā)
+* Walloon: {{t|wa|a}}
 {{trans-bottom}}
 
 ===Noun===
