--- a/en/r/rub salt in the wound.742296.wikitext
+++ b/en/r/rub salt in the wound.742296.wikitext
@@ -18,6 +18,7 @@ Derived from the stingingly painful sensation of table salt deliberately being r
 ====Synonyms====
 * [[add insult to injury]]
 * [[kick someone when they are down]]
+* [[twist the knife]]
 
 ====Translations====
 {{trans-top|to make an injury feel worse}}
