--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -38,15 +38,17 @@ From {{etyl|enm}} {{term|benden}}, from {{etyl|ang}} {{term|bendan||to bind or b
 # {{intransitive|nautical}} To [[swing]] the [[body]] when [[rowing]].<!--activity-->
 
 ====Derived terms====
+{{rel-top|terms derived from ''bend (verb)''}}
 * [[bend down]]
 * [[bend over]]
 * [[bend over backwards]]
 * [[bend somebody's ear]]
+{{rel-mid}}
 * [[on bended knee]]
 * [[bend one's elbow]]
 * [[bend out of shape]]
 * [[bend the truth]]
-* [[bendsome]]
+{{rel-bottom}}
 
 ====Translations====
 {{trans-top|to shape into a curve}}
