--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -164,14 +164,18 @@ From {{etyl|enm}} {{term|benden}}, from {{etyl|ang}} {{term|bendan||to bind or b
 # {{heraldiccharge}} One of the [[honourable]] [[ordinary|ordinaries]] formed by two [[diagonal]] [[line]]s drawn from the [[dexter chief]] to the [[sinister base]]; it generally occupies a [[fifth]] part of the [[shield]] if [[uncharged]], but if [[charged]] one [[third]].
 
 ====Derived terms====
+{{rel-top|terms derived from ''bend (noun)''}}
 * [[around the bend]]
 * [[bend sinister]]
 * [[bendlet]]
+* [[bendsome]]
 * [[bendy]]
+{{rel-mid}}
 * [[drive somebody round the bend]]
 * [[in bend]]
 * [[sheet bend]]
 * [[string bend]]
+{{rel-bottom}}
 
 ====Related terms====
 * [[bent]]
