--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -110,6 +110,7 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 * [[Nahuatl]]: {{t-|nah|occeppa|xs=Nahuatl}}
 * Navajo: {{tø|nv|nááná}}
 * Norwegian: {{t+|no|igjen}}
+* Pashto: {{t|ps|بيا|tr=byâ}}
 * Persian: {{t|fa|دگربار|tr=degarbâr}}, {{t|fa|دوباره|tr=do-bâre|sc=fa-Arab}}, {{t|fa|باز|tr=bâz|sc=fa-Arab}}
 * Polish: {{t|pl|ponownie}}, {{t|pl|znowu}}, {{t|pl|jeszcze raz}}
 * Portuguese: [[de novo]], [[outra vez]], [[novamente]]
