--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -109,9 +109,8 @@
 * Galician: {{t+|gl|illa|f|xs=Galician}}
 * Georgian: {{t-|ka|კუნძული|tr=kundzuli|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Insel|f}}, {{qualifier|poetic}} {{t|de|Eiland|n}}
-* Greek:
-*: Ancient: {{tø|grc|νῆσος|f|tr=nē̂sos|sc=polytonic|xs=Ancient Greek}}
-*: Modern: {{qualifier|formal}} {{t+|el|νήσος|f|tr=nísos}}, {{t+|el|νησί|n|tr=nisí}}
+* Greek: {{qualifier|formal}} {{t+|el|νήσος|f|tr=nísos|sc=Grek}}, {{t+|el|νησί|n|tr=nisí|sc=Grek}}
+*: Ancient: {{tø|grc|νῆσος|f|tr=nē̂sos|sc=polytonic|xs=Ancient Greek}} 
 * Gujarati: [[દ્વીપ]]
 * Haitian Creole: {{tø|ht|zile|xs=Haitian Creole}}, {{tø|ht|zil}}
 * Hebrew: {{t+|he|אי|m|alt=אִי|tr=i}}
@@ -222,7 +221,7 @@
 * Faroese: {{t-|fo|oyggj|f|xs=Faroese}}
 * Finnish: {{t-|fi|saareke}}
 * French: {{t+|fr|île|f}}
-* Greek: {{t+|el|νησί|n|tr=nisí}},  {{t|el|νησίδα|f|tr=nisída}}
+* Greek: {{t+|el|νησί|n|tr=nisí|sc=Grek}}, {{t|el|νησίδα|f|tr=nisída|sc=Grek}}
 * Hebrew: {{t+|he|אי|i|m|alt=אִי}}
 * Hungarian: {{t+|hu|sziget}}
 * Icelandic: {{t+|is|eyja|f}}, {{t|is|eyland|n}}
