--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -28,6 +28,7 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 # A [[superstructure]] on an aircraft carrier's [[deck]]
 
 ====Synonyms====
+* {{sense|land surrounded by water}} {{l|en|ait}}, {{l|en|holm}}
 * {{sense|an entity surrounded by other very different entities}} [[oasis]]
 
 ====Derived terms====
