--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -60,6 +60,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Spanish: {{t-|es|bambú|m}}
 * Tagalog: [[kawayan]]
 * Thai: [[ไผ่]] (phai)
+* Tok Pisin: {{t|tpi|mambu}}
 * Volapük: {{t|vo|bambud}}, {{qualifier|obsolete}} {{t|vo|lerid}}
 {{trans-bottom}}
 
@@ -82,6 +83,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Slovene: {{t+|sl|bambus|m}}
 * Tagalog: [[kawayan]]
 * Thai: [[ไม้ไผ่]] (mai phai)
+* Tok Pisin: {{t|tpi|mambu}}
 {{trans-bottom}}
 
 {{checktrans-top}}
@@ -115,6 +117,7 @@ The translations below need to be checked by native speakers and inserted into t
 * Russian: {{t+|ru|бамбуковый}}
 * Slovene: [[bambusov]]
 * Tagalog: [[kawayan]]
+* Tok Pisin: {{t|tpi|mambu}}
 {{trans-bottom}}
 
 ===Anagrams===
