--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -24,7 +24,7 @@ Used with the definite article {{term|the}}.
 
 ====Derived terms====
 * [[Balkan]]
-* [[balkanize]]
+* [[Balkanize]]
 
 ====Translations====
 {{trans-top|geographical region in the southeast of Europe}}
