--- a/en/-/-ica.801322.wikitext
+++ b/en/-/-ica.801322.wikitext
@@ -1,9 +1,9 @@
 ==English==
 
 ===Etymology===
-{{etyl|la}} {{term|-ica||(plural suffix)|lang=la}}, plural form of {{term|-icus||(singular suffix)|lang=la}}.
+{{etyl|la}} {{term|-ica||(plural suffix)|lang=la}}, plural form of {{term|-icum||(singular suffix)|lang=la}}.
 
-Note that etymologically this is not {{term|-ic}} + {{term|-a||(plural ending)}}, as {{term|-ic}} is the English form, having dropped the {{term|-us}}, though adding an ''-a'' to an English word ending in ''-ic'' does produce a superficially etymologically correct Latinate form.
+Note that etymologically this is not {{term|-ic}} + {{term|-a||(plural ending)}}, as {{term|-ic}} is the English form, having dropped the {{term|-um}}, though adding an ''-a'' to an English word ending in ''-ic'' does produce a superficially etymologically correct Latinate form.
 
 ===Suffix===
 {{head|en|suffix|cat=suffixes|sort=ica}}
