/* English */ order <sparra#16617348>

--- a/en/s/sparra.720255.wikitext
+++ b/en/s/sparra.720255.wikitext
@@ -2,11 +2,10 @@
 ==English==
 
 ===Etymology===
-{{en-noun}}
-London [[eye dialect]] of ''[[sparrow]]''.
+London {{eye dialect|sparrow}}
 
 ===Noun===
-{{infl|en|noun}}[[Category:English nouns that lack inflection template]]
+{{en-noun}}
 
 # {{London}} A [[sparrow]].
 #* '''2008''', Jon Wise, ''[http://www.people.co.uk/news/uk-world-news/2008/01/13/double-trouble-as-soap-won-t-wash-102039-20283927/ Double trouble as soap won't wash]'', People
