--- a/en/u/unlikeness.742240.wikitext
+++ b/en/u/unlikeness.742240.wikitext
@@ -1,8 +1,22 @@
 ==English==
+
+===Etymology===
+{{suffix|unlike|ness}}
+
 ===Noun===
 {{en-noun|es|-}}
-#{{uncountable}} The state of being [[unlike]].
-#{{countable}} An unlike characteristic.
+
+# {{uncountable}} the state of being [[unlike]]
+# {{countable}} an unlike characteristic
+
+====Translations====
+{{trans-top|the state of being unlike}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|an unlike characteristic}}
+{{trans-mid}}
+{{trans-bottom}}
 
 [[de:unlikeness]]
 [[ko:unlikeness]]
