--- a/en/u/unlikeness.742240.wikitext
+++ b/en/u/unlikeness.742240.wikitext
@@ -11,6 +11,7 @@
 
 ====Translations====
 {{trans-top|the state of being unlike}}
+* Irish: {{t|ga|éagsúlacht|f}}
 {{trans-mid}}
 {{trans-bottom}}
 
