/* translation gloss:small change */ +cs:[[přizpůsobení]]; +cs:[[úprava]] <adjustment#16620884>

--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -32,6 +32,7 @@
 * Basque: {{t|eu|egokitze|xs=Basque}}
 * Bulgarian: {{t|bg|нагласяване}}, {{t|bg|приспособяване}}, {{t|bg|настройка}}
 * Catalan: {{t|ca|ajust|m}}, {{t|ca|ajustment|m}}
+* Czech: {{t|cs|přizpůsobení}}, {{t|cs|úprava}}
 * Danish: {{t|da|justering|c}}, {{t|da|tilpasning|c}}
 * Dutch: [[aanpassing]] {{f}}, [[bijregeling]] {{f}}
 * Esperanto: {{t-|eo|adapto|xs=Esperanto}}, {{t|eo|akomodo|xs=Esperanto}}, {{t|eo|alĝustigo|xs=Esperanto}}, {{t|eo|ĝustigo|xs=Esperanto}}
