/* translation gloss:an unproven conjecture */ +cs:[[teorie]] <theory#16622265>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -137,6 +137,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Catalan: {{t|ca|teoria|f}}
 * Chinese:
 *: Mandarin: {{t-|cmn|理論|sc=Hani}},  {{t-|cmn|理论|tr=lǐlùn|sc=Hani}}
+* Czech: {{t|cs|teorie|f}}
 * Dutch: {{t+|nl|theorie}}
 * Finnish: {{t-|fi|teoria}}
 * French: {{t+|fr|théorie|f}}
