/* translation gloss:in logic: a set of axioms and all statements derivable from them */ +cs:[[teorie]] <theory#16622272>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -191,6 +191,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 
 {{trans-top|in logic: a set of axioms and all statements derivable from them}}
 * Catalan: {{t|ca|teoria|f}}
+* Czech: {{t|cs|teorie|f}}
 * Dutch: {{t+|nl|theorie}}
 * Finnish: {{t-|fi|teoria}}
 * German: {{t+|de|Theorie|f}}
