--- a/en/s/summer-like.801704.wikitext
+++ b/en/s/summer-like.801704.wikitext
@@ -2,4 +2,4 @@
 ===Adjective===
 {{en-adj|pos=[[summer]]-[[like]]}}
 
-#A variant spelling of '''[[summerlike]]'''.
+# {{alternative spelling of|summerlike}}
