--- a/en/s/summer house.801699.wikitext
+++ b/en/s/summer house.801699.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 {{en-noun|sg=[[summer]] [[house]]}}
 
-#A variant spelling of '''[[summerhouse]]'''.
+# {{alternative spelling of|summerhouse}}
 
 [[fi:summer house]]
 [[ta:summer house]]
