--- a/en/s/summer-house.801700.wikitext
+++ b/en/s/summer-house.801700.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 {{en-noun|sg=[[summer]]-[[house]]}}
 
-#A variant spelling of '''[[summerhouse]]'''.
+# {{alternative spelling of|summerhouse}}
 
 [[et:summer-house]]
 [[fi:summer-house]]
