--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -155,7 +155,7 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Maltese: {{t|mt|gżira|f}}
 * Maori: {{t-|mi|motu|xs=Maori}}
 * Marathi: [[बेट]]
-* Mizo: {{tø|lus|thliarkar}}
+* Mizo: {{tø|lus|thliarkar|lus=Mizo}}
 * Mongolian: {{t-|mn|арал|tr=aral|sc=Cyrl|xs=Mongolian}}
 * {{trreq|ne}}
 * Norfuk: {{tø|cpe-nor|ailen}}
