/* Interjection */ improved def; more syns <no kidding#16647680>

--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -1,13 +1,13 @@
 ==English==
 
 ===Interjection===
-'''[[no]] [[kidding]]'''
+'''[[no]] [[kidding]]!'''
 
 # {{colloquial}} An exclamation of [[amazement]].
-# {{colloquial|sarcastic}} Response to the [[obvious]].
+# {{colloquial|sarcastic}} Said in response to an [[obvious]] statement.
 
 ====Synonyms====
-* {{sense|amazement}} [[no shit]], [[no way]]
+* {{sense|amazement}} [[never]], [[no]], [[no shit]], [[no way]], [[really]], [[wow]]
 * {{sense|response to the obvious}} [[really]], [[oh really]], [[you don't say]]
 
 [[Category:English interjections]]
