/* Translations */ <no kidding#16673859>

--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -15,6 +15,7 @@
 * Chinese:
 *: Cantonese: {{tø|yue|講真？！|sc=Hant}}, {{tø|yue|讲真？！|tr=gong2 zan1?!|sc=Hant}}
 *: Mandarin: {{t|zh|當真？！|sc=Hani}}, {{t|zh|当真|tr=dàngzhēn?!|alt=当真？！|sc=Hani}}
+{{trans-mid}}
 * French: {{t|fr|sans blague}}
 {{trans-bottom}}
 
