--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -17,6 +17,7 @@
 *: Mandarin: {{t|zh|當真？！|sc=Hani}}, {{t|zh|当真|tr=dàngzhēn?!|alt=当真？！|sc=Hani}}
 {{trans-mid}}
 * French: {{t|fr|sans blague}}
+* Russian: {{t|ru|неужели|tr=neužéli?|alt=неужели?|sc=Cyrl}}
 {{trans-bottom}}
 
 [[Category:English interjections]]
