--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -26,6 +26,7 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 ====Translations====
 {{trans-top|rodent}}
 * Arabic: {{t|ar|فأر المسك|sc=Arab}}
+* Azeri: {{t|az|ondatra}}
 * [[Basque]]: {{t|eu|arratoi musketadun|xs=Basque}}
 * Belarusian: {{t|be|андатра|f|xs=Belarusian}}
 * Bosnian: {{t|bs|bizamski pacov|m}}
