--- a/en/m/maiden voyage.745833.wikitext
+++ b/en/m/maiden voyage.745833.wikitext
@@ -9,8 +9,9 @@
 ====Translations====
 {{trans-top|first trip of a vessel}}
 * Czech: {{t-|cs|panenská plavba|f}}
-{{trans-mid}}
 * Finnish: {{t+|fi|neitsytmatka}}
+{{trans-mid}}
+* German: {{t|de|Jungfernfahrt|f}}
 {{trans-bottom}}
 
 [[et:maiden voyage]]
