--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -40,6 +40,7 @@ From {{etyl|enm}} {{term|beholden|lang=enm}}, from {{etyl|ang}} {{term|behealdan
 * [[Scottish Gaelic]]: [[amhairc]]
 * Serbian: [[posmatrati]], [[gledati]]
 * Spanish: {{t-|es|contemplar}}, {{t+|es|mirar}}, {{t+|es|observar}}
+* Turkish: {{t|tr|bakmak}}
 {{trans-bottom}}
 
 ===References===
