t+rap:[[i]] ([[WT:EDIT|Assisted]]) <at#16686962>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -72,6 +72,7 @@ From {{etyl|enm}} {{term|at|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, 
 * Persian: {{fa-Arab|[[در|دَر]]}} (dær)
 * Polish: {{t+|pl|u}}, {{t+|pl|przy}}
 * Portuguese: {{t+|pt|a}}, {{t+|pt|em}}
+* Rapa Nui: {{tø|rap|i}}
 * Romanian: {{t-|ro|la}}
 * Russian: [[в#Russian|в]] (v), [[на]] (na), [[при]] (pri), [[у#Russian|у]] (u), [[возле]] (vózle)
 * Slovak: [[v#Slovak|v]]; [[pri#Slovak|pri]]; [[na#Slovak|na]]
