/* Noun */ Additional Slang entry (US regional to Chicago- Blow also refers to heroin) <blow#16695016>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -311,6 +311,7 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 #: ''The players were able to get a '''blow''' during the last timeout.''
 # {{uncountable|US|slang}} [[cocaine|Cocaine]].<!--3-->
 # {{uncountable|UK|slang}} [[cannabis|Cannabis]].<!--3-->
+# {{uncountable|US Chicago Regional|slang}} [[heroin|Heroin]].<!--3-->
 
 =====Translations=====
 {{trans-top|strong wind}}
