t+ku:[[girav ]] ([[WT:EDIT|Assisted]]) <island#16698735>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -138,6 +138,8 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Korean: {{t+|ko|섬|tr=seom|sc=Hang}}
 * Kumyk: {{tø|kum|атав|tr=ataw|sc=Cyrl}}
 {{trans-mid}}
+* Kurdish:
+*: Kurmanji : {{t|ku|girav |f|sc=ku-Arab}}
 * Kyrgyz: {{t-|ky|арал|tr=aral|sc=Cyrl|xs=Kyrgyz}}
 * Lakota: {{tø|lkt|wíta}}
 * Lao: {{t-|lo|ດອນ|tr=döön|sc=Laoo|xs=Lao}}
