--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -3,6 +3,9 @@
 ===Etymology===
 From {{etyl|fr}} {{term|quadrupède|lang=fr}}, from {{etyl|frm}}, from {{etyl|la}} stem of  {{term|quadrupes||lang=la|four-footed, a four-footed animal}}, from {{term|quadri-||lang=la|four-}} + stem of {{term|pes||lang=la|foot}}
 
+===Pronunciation=== 
+* {{IPA|/ˈkwɒdruped/|lang=en}} 
+
 ===Noun===
 {{en-noun}}
 
