--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -14,6 +14,7 @@ From {{etyl|fr}} {{term|quadrupède|lang=fr}}, from {{etyl|frm}}, from {{etyl|la
 
 ====Translations====
 {{trans-top|a four-footed or four-legged animal}}
+* Armenian: {{t|hy|չորքոտանի|tr=čʿorkʿotani|sc=Armn}}
 * Dutch: [[viervoeter]] {{m}}
 * Finnish: {{t-|fi|nelijalkainen}}
 * French: {{t+|fr|quadrupède|m}}
@@ -21,6 +22,7 @@ From {{etyl|fr}} {{term|quadrupède|lang=fr}}, from {{etyl|frm}}, from {{etyl|la
 * Icelandic: {{t|is|ferfætlingur|m}}
 {{trans-mid}}
 * Navajo: {{tø|nv|naaldlooshii}}
+* Russian: {{t|ru|четвероногое|sc=Cyrl}}
 * Spanish: {{t|es|cuadrúpedo|m}}
 * Telugu: {{t+|te|చతుష్పదము|tr=chatush-padamu}}
 * Volapük: {{qualifier|male or female}} {{t|vo|folfutaf}}, {{qualifier|male}} {{t|vo|hifolfutaf}}, {{qualifier|female}} {{t|vo|jifolfutaf}}, {{qualifier|male or female}} {{t|vo|follögaf}}, {{qualifier|male}} {{t|vo|hifollögaf}}, {{qualifier|female}} {{t|vo|jifollögaf}}
