--- a/en/b/bunny hop.855593.wikitext
+++ b/en/b/bunny hop.855593.wikitext
@@ -9,3 +9,4 @@
 # {{cycling}} A jump made where both wheels leave the ground.
 # {{baseball}} A [[ground ball]] that hops along the [[field]] instead of [[rolling]].
 #: ''The first baseman misplays the '''bunny hop''', so all runners are safe.''
+# An exercise whereby the person crouches on their haunches and then extends their legs and springs up, jumping vertically into the air like a rabbit hopping.
