--- a/en/f/foo-foo.855761.wikitext
+++ b/en/f/foo-foo.855761.wikitext
@@ -12,7 +12,7 @@ From West African languages such as [[Ewe]], {{term|fufú||lang=ln}} meaning 'wh
 ===Noun===
 {{en-noun|-}}
 
-# A [[dish]] of boiled, mashed [[yam]]s, [[plantain]], or other starchy vegetables, common as food in [[west and equatorial]] [[Africa]] and the [[Caribbean]]. Sold in speciality stores {{US}} in dry powdered or granulated form.
+# A [[dish]] of boiled, mashed [[yam]]s, [[plantain]], or other starchy vegetables, common as food in West and Equatorial [[Africa]] and the [[Caribbean]]. Sold in speciality stores {{US}} in dry powdered or granulated form.
 #* '''1958''', [[w:Chinua_Achebe|Chinua Achebe]], ''Things Fall Apart'', ch 11:
 #*: Ezinma and her mother sat on a mat on the floor after their supper of yam '''foo-foo''' and bitter-leaf soup.
 #* {{quote-book|title=The concubine‎|page=45|author=Elechi Amadi|year=1991|passage=There was so much fish and meat in the soup that they had to put them on a separate plate, to facilitate the free movement of their balls of '''foo-foo''' in the soup}}
