--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -1,5 +1,6 @@
+<div class="noprint" style="border:solid #aaa 1px;margin:0;font-size:74%;background:#f9f3f6;width:120px;padding:3px;spacing:0;text-align:center;float:right"><div style="float:left">[[Image:Commons-logo.svg|24px|none|link=Commons:Category:Radical 074]]</div>[[Commons:Category:Radical 074-0|Test: before<br>'''Radical 74 <big>月</big>''']]</div><br>
 ==Translingual==
-{{commonsrad|74}}
+<div class="noprint" style="border:solid #aaa 1px;margin:0;font-size:74%;background:#f9f3f6;width:120px;padding:3px;spacing:0;text-align:center;float:right"><div style="float:left">[[Image:Commons-logo.svg|24px|none|link=Commons:Category:Radical 074]]</div>[[Commons:Category:Radical 074-0|Test: T.ling<br>'''Radical 74 <big>月</big>''']]</div>
 {{stroke order|type=animate}}
 {{stroke order}}
 
@@ -12,7 +13,8 @@
 As part of a compound, should not be confused with [[⺼]], form of {{term|肉||flesh, meat|sc=Hani}}, which is used for example for parts of the body such as {{term|背||back|sc=Hani}}. These may be drawn identically, as 月, but in careful use they are distinguished, with ⺼ written with unattached diagonal strokes. This is particularly an issue in looking up characters by radical; compare [[Index:Chinese radical/月|月 index]] and [[Index:Chinese radical/肉|肉 index]].
 
 ===Han character===
-{{commonsrad|074}}
+<div class="noprint" style="border:solid #aaa 1px;margin:0;font-size:74%;background:#f9f3f6;width:120px;padding:3px;spacing:0;text-align:center;float:right"><div style="float:left">[[Image:Commons-logo.svg|24px|none|link=Commons:Category:Radical 074]]</div>[[Commons:Category:Radical 074-0|Test: Han ch<br>'''Radical 74 <big>月</big>''']]</div>
+
 {{Han char|rn=74|rad=月|as=00|sn=4|four=7722<sub>0</sub>|canj=月 (B)|ids=⿵[[冂]][[二]]}}
 
 # [[moon]]
