--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -1,9 +1,13 @@
 <div class="noprint" style="border:solid #aaa 1px;margin:0;font-size:74%;background:#f9f3f6;width:120px;padding:3px;spacing:0;text-align:center;float:right"><div style="float:left">[[Image:Commons-logo.svg|24px|none|link=Commons:Category:Radical 074]]</div>[[Commons:Category:Radical 074-0|Test: before<br>'''Radical 74 <big>月</big>''']]</div><br>
-==Translingual==
-<div class="noprint" style="border:solid #aaa 1px;margin:0;font-size:74%;background:#f9f3f6;width:120px;padding:3px;spacing:0;text-align:center;float:right"><div style="float:left">[[Image:Commons-logo.svg|24px|none|link=Commons:Category:Radical 074]]</div>[[Commons:Category:Radical 074-0|Test: T.ling<br>'''Radical 74 <big>月</big>''']]</div>
+==Translingual (with some test boxes)==
+<div class="noprint" style="border:solid #aaa 1px;margin:0;font-size:74%;background:#f9f3f6;width:120px;padding:3px;spacing:0;text-align:center;float:right"><div style="float:left">[[Image:Commons-logo.svg|24px|none|link=Commons:Category:Radical 074]]</div>[[Commons:Category:Radical 074-0|Test: T.ling1<br>'''Radical 74 <big>月</big>''']]</div>
 {{stroke order|type=animate}}
+<div class="noprint" style="border:solid #aaa 1px;margin:0;font-size:74%;background:#f9f3f6;width:120px;padding:3px;spacing:0;text-align:center;float:right;clear:right"><div style="float:left">[[Image:Commons-logo.svg|24px|none|link=Commons:Category:Radical 074]]</div>[[Commons:Category:Radical 074-0|Test: T.ling2<br>'''Radical 74 <big>月</big>''']]</div>
 {{stroke order}}
-
+<!--
+<div class="noprint" style="border:solid #aaa 1px;margin:0;font-size:74%;background:#f9f3f6;width:120px;padding:3px;spacing:0;text-align:center;float:right"><div style="float:left">[[Image:Commons-logo.svg|24px|none|link=Commons:Category:Radical 074]]</div>[[Commons:Category:Radical 074-0|Test: T.ling3<br>'''Radical 74 <big>月</big>''']]</div>
+<div class="noprint" style="border:solid #aaa 1px;margin:0;font-size:74%;background:#f9f3f6;width:120px;padding:3px;spacing:0;text-align:center;float:right;clear:right"><div style="float:left">[[Image:Commons-logo.svg|24px|none|link=Commons:Category:Radical 074]]</div>[[Commons:Category:Radical 074-0|Test: T.ling4<br>'''Radical 74 <big>月</big>''']]</div>
+-->
 ===Etymology===
 {{liushu|p}}, originally of the [[crescent]] [[moon]].
 
@@ -35,7 +39,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 
 ----
 <div style="display:block;position:fixed;right:20px;top:70px;height:36px;width:102px"><div style="margin:0;height:36px;width:100px;border:solid #faf 2px;font-size:74%;background:none;padding:2px;spacing:0;text-align:center">
-<div style="float:left">[[Image:Commons logo optimized-200px-transparent.png|24px|none|link=Commons:Category:Radical {{padleft:{{{1|74}}}|3|0}}]]</div>[[Commons:Category:{{#if:{{{2|}}}|{{SUBPAGENAME}}|Radical {{padleft:{{{1|74}}}|3|0}}-0}}|See images of {{#if:{{{2|}}}|<big>{{SUBPAGENAME}}</big><br>(radical {{{1|}}} + {{{2}}})|<br>'''Radical {{{1|74 <big>月</big>}}}<includeonly><big> {{SUBPAGENAME}}</big></includeonly>}}''']]</div><!--includeonly-->{{#ifeq:{{PAGENAME}}{{{2|}}}|{{SUBPAGENAME}}|[[Category:Han character radicals| ]]}}<!--/includeonly--></div></div>
+<div style="float:left">[[Image:Commons logo optimized-200px-transparent.png|24px|none|link=Commons:Category:Radical {{padleft:{{{1|74}}}|3|0}}]]</div>[[Commons:Category:{{#if:{{{2|}}}|{{SUBPAGENAME}}|Radical {{padleft:{{{1|74}}}|3|0}}-0}}|Test: float {{#if:{{{2|}}}|<big>{{SUBPAGENAME}}</big><br>(radical {{{1|}}} + {{{2}}})|<br>'''Radical {{{1|74 <big>月</big>}}}<includeonly><big> {{SUBPAGENAME}}</big></includeonly>}}''']]</div><!--includeonly-->{{#ifeq:{{PAGENAME}}{{{2|}}}|{{SUBPAGENAME}}|[[Category:Han character radicals| ]]}}<!--/includeonly--></div></div>
 
 
 ==Cantonese==
