t+es:[[viaje inaugural]] ([[WT:EDIT|Assisted]]) <maiden voyage#16720196>

--- a/en/m/maiden voyage.745833.wikitext
+++ b/en/m/maiden voyage.745833.wikitext
@@ -12,6 +12,7 @@
 * Finnish: {{t+|fi|neitsytmatka}}
 {{trans-mid}}
 * German: {{t|de|Jungfernfahrt|f}}
+* Spanish: {{t|es|viaje inaugural|m}}
 {{trans-bottom}}
 
 [[et:maiden voyage]]
