--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -29,6 +29,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Bengali: {{t|bn|ভদকা|tr=vôdka|sc=Beng}}, {{t|bn|ဗော့ဒ်ကာ|sc=Beng}}
 * Bosnian: {{t-|bs|votka|f}}
 * Bulgarian: {{t-|bg|водка|f|tr=vódka}}
+* Burmese: {{t|my|ဗော့ဒ်ကာ|sc=Mymr}}
 * [[Catalan]]: vodka {{f}}
 * Chinese:
 *: Mandarin: {{t-|cmn|伏特加酒|tr=fútèjiā-jiǔ|sc=Hani}}, {{t-|cmn|伏特加|tr=fútèjiā|sc=Hani}}
@@ -50,8 +51,8 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Irish: {{t-|ga|vodca|m|xs=Irish}}
 * Italian: {{t+|it|vodka|f}}
 * Japanese: {{t-|ja|ウォッカ|tr=uokka}}, {{t|ja|ヴォートカ|tr=vōtoka}}
-* Korean: {{t+|ko|보드카|tr=bodeuka|sc=Hang}}
 {{trans-mid}}
+* Korean: {{t+|ko|보드카|tr=bodeuka|sc=Hang}}
 * [[Kölsch]]: {{tø|ksh|wodka}}
 * [[Latgalian]]: {{tø|ltg|braņdīņs}}
 * Latin: {{t-|la|vodca}}
