t+fi:[[vodka]] t+vi:[[vôtca]] t+vi:[[rượu vôtca]] t+os:[[арахъ]] t-balance t+tt:[[водка]] ([[WT:EDIT|Assisted]]) <vodka#16720459>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -38,7 +38,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Dutch: {{t-|nl|wodka|m}}
 * Esperanto: {{t-|eo|vodko|xs=Esperanto}}
 * Estonian: {{t+|et|vodka}}, {{t+|et|viin}}
-* Finnish: {{t+|fi|votka}}
+* Finnish: {{t+|fi|votka}}, {{t|fi|vodka}}
 * French: {{t+|fr|vodka|f}}
 * Georgian: {{t-|ka|არაყი|tr=araġi|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Wodka|m}}
@@ -51,9 +51,9 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Irish: {{t-|ga|vodca|m|xs=Irish}}
 * Italian: {{t+|it|vodka|f}}
 * Japanese: {{t-|ja|ウォッカ|tr=uokka}}, {{t|ja|ヴォートカ|tr=vōtoka}}
-{{trans-mid}}
 * Korean: {{t+|ko|보드카|tr=bodeuka|sc=Hang}}
 * [[Kölsch]]: {{tø|ksh|wodka}}
+{{trans-mid}}
 * [[Latgalian]]: {{tø|ltg|braņdīņs}}
 * Latin: {{t-|la|vodca|f}}
 * Latvian: {{t|lv|degvīns|m|xs=Latvian}}, {{t|lv|šņabis|m}}
@@ -62,6 +62,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * [[Macedonian]]: {{t-|mk|вотка|f|tr=vótka}}
 * Malay: {{t|ms|vodka}}
 * Norwegian: {{t-|no|vodka|c}}
+* Ossetian: {{tø|os|арахъ|tr=araq|sc=Cyrl}}
 * Persian: {{t+|fa|ودکا|tr=vodkâ|xs=Persian}}
 * Polish: {{t+|pl|wódka|f}}
 * Portuguese: {{t-|pt|vodca|f}}
@@ -77,12 +78,13 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Swahili: {{t-|sw|vodka|xs=Swahili}}
 * Swedish: {{t+|sv|vodka|c}}
 * [[Tamil]]: {{t|ta|ஓட்கா|tr=oṭkā|sc=Taml}}
+* Tatar: {{t|tt|водка|tr=vodka|sc=Cyrl}}
 * [[Telugu]]: {{t|te|వోడ్కా|tr=voḍkā|sc=Telu}}
 * Thai: {{t-|th|วอดก้า|tr=waawtgaa}}
 * Turkish: {{t+|tr|votka}}
 * Ukrainian: {{t-|uk|горілка|f|tr=horílka|xs=Ukrainian}}, {{t-|uk|водка|f|tr=vódka|xs=Ukrainian}}
 * Urdu: {{t|ur|وودکا|f|tr=vodkā|sc=ur-Arab}}, {{t|ur|ووڈکا|f|tr=voḍkā|sc=ur-Arab}}
-* Vietnamese: {{t+|vi|vodka|xs=Vietnamese}}
+* Vietnamese: {{t+|vi|vodka|xs=Vietnamese}}, {{t|vi|vôtca}}, {{t|vi|rượu vôtca}}
 * Yiddish: {{t|yi|מאַשקע|sc=Hebr}}
 {{trans-bottom}}
 
