t+is:[[vodka]] t-balance t+mt:[[vodka]] ([[WT:EDIT|Assisted]]) <vodka#16720470>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -47,13 +47,14 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Hebrew: {{t+|he|וודקה|f|alt=ווֹדְקָה|tr=vodka}}
 * Hindi: {{t|hi|वोदका|f|tr=vodkā|xs=Hindi}}, {{t|hi|वोडका|f|tr=voḍkā|sc=Deva}}
 * Hungarian: {{t|hu|vodka}}
+* Icelandic: {{t|is|vodka|f}}
 * Indonesian: {{t|id|vodka}}
 * Irish: {{t-|ga|vodca|m|xs=Irish}}
 * Italian: {{t+|it|vodka|f}}
 * Japanese: {{t-|ja|ウォッカ|tr=uokka}}, {{t|ja|ヴォートカ|tr=vōtoka}}
 * Korean: {{t+|ko|보드카|tr=bodeuka|sc=Hang}}
-* [[Kölsch]]: {{tø|ksh|wodka}}
 {{trans-mid}}
+* [[Kölsch]]: {{tø|ksh|wodka}}
 * [[Latgalian]]: {{tø|ltg|braņdīņs}}
 * Latin: {{t-|la|vodca|f}}
 * Latvian: {{t|lv|degvīns|m|xs=Latvian}}, {{t|lv|šņabis|m}}
@@ -61,6 +62,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * [[Luxembourgish]]: {{t|lb|Wodka}}
 * [[Macedonian]]: {{t-|mk|вотка|f|tr=vótka}}
 * Malay: {{t|ms|vodka}}
+* Maltese: {{t|mt|vodka|f}}
 * Norwegian: {{t-|no|vodka|c}}
 * Ossetian: {{tø|os|арахъ|tr=araq|sc=Cyrl}}
 * Persian: {{t+|fa|ودکا|tr=vodkâ|xs=Persian}}
