--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -84,7 +84,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * [[Tamil]]: {{t|ta|ஓட்கா|tr=oṭkā|sc=Taml}}
 * Tatar: {{t|tt|водка|tr=vodka|sc=Cyrl}}
 * [[Telugu]]: {{t|te|వోడ్కా|tr=voḍkā|sc=Telu}}
-* Thai: {{t-|th|วอดก้า|tr=waawtgaa}}
+* Thai: {{t-|th|วอดก้า|tr=wôt gâa}}
 * Turkish: {{t+|tr|votka}}
 * Ukrainian: {{t-|uk|горілка|f|tr=horílka|xs=Ukrainian}}, {{t-|uk|водка|f|tr=vódka|xs=Ukrainian}}
 * Urdu: {{t|ur|وودکا|f|tr=vodkā|sc=ur-Arab}}, {{t|ur|ووڈکا|f|tr=voḍkā|sc=ur-Arab}}
