--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -6,7 +6,7 @@
 ===Noun===
 {{es-noun|mf}}
 
-# citizen of the [[United States]] in the countinent of America; [[United Statesian]]
+# citizen of the [[United States]] in the continent of America; [[United Statesian]]
 
 ===Adjective===
 {{es-adj|f=estadounidense|pl=estadounidenses}}
