--- a/en/o/orients.746836.wikitext
+++ b/en/o/orients.746836.wikitext
@@ -6,7 +6,7 @@
 # {{third-person singular of|orient}}
 
 ===Anagrams===
-* [[in store#English|in store]], [[instore#English|instore]], [[sterino#English|sterino]], [[stonier#English|stonier]], [[tries on#English|tries on]], [[triones#English|triones]]
+* [[in store#English|in store]], [[instore#English|instore]], [[noirest#English|noirest]], [[sterino#English|sterino]], [[stonier#English|stonier]], [[tries on#English|tries on]], [[triones#English|triones]]
 
 [[de:orients]]
 [[eo:orients]]
