/* Translations */ +el <bind#16738862>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -72,6 +72,7 @@ From {{etyl|ang}} ''[[bindan]]'', from {{proto|Germanic|bindanan}} (compare West
 * Czech: {{t-|cs|svázat}}
 * Esperanto: {{t-|eo|bindi|xs=Esperanto}}
 * German: {{qualifier|z.B. ein Buch}} {{t|de|binden}}
+* Greek: {{t|el|βιβλιοδετώ|tr=vivliodetó|sc=Grek}}
 {{trans-mid}}
 * Portuguese: {{t|pt|encapar}}
 * Russian: {{t|ru|переплетать|tr=perepletát'|alt=переплета́ть}}, {{t|ru|переплести|tr=pereplestí|alt=переплести́}}
