/* Translations */ ed el <bet#16740527>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -27,7 +27,7 @@
 * French: {{t+|fr|pari}}
 * {{trreq|Georgian}}
 * German: {{t+|de|Wette|f}}
-* Greek: {{t|el|στοίχημα|n|stoíchima}}
+* Greek: {{t|el|στοίχημα|n|tr=stoíchima}}
 * Greenlandic: {{t-|kl|eqquiniut|xs=Greenlandic}}
 * Hebrew: [[התערבות]] (hitarvut) {{f}}
 {{trans-mid}}
