--- a/en/q/quatorze.26056.wikitext
+++ b/en/q/quatorze.26056.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|fr}}
+{{borrowing|fr}}.
 
 ===Noun===
 {{en-noun}}
@@ -46,7 +46,7 @@ From {{etyl|la|fr}} {{term|quattuordecim|lang=la}}.
 ==Guernésiais==
 
 ===Etymology===
-{{rfe|lang=roa-grn}}
+From {{etyl|la|roa-grn}} {{term|quattuordecim|lang=la}}.
 
 ===Number===
 {{cardinalbox|roa-grn|13|14|15|treize|tchinze}}
