--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -28,32 +28,29 @@ Used with the definite article {{term|the}}.
 
 ====Translations====
 {{trans-top|geographical region in the southeast of Europe}}
-* {{trreq|Albanian}}
+* {{trreq|sq}}
 * Ancient Greek: {{tø|grc|Χερσόνησος τοῦ Αἵμου|m|tr=Khersonēsos tou Aimou|sc=polytonic}}
 * Armenian: {{t-|hy|Բալկաններ|tr=Balkanner}}
 * Asturian: {{t-|ast|Balcanes|m|xs=Asturian}}
-* {{trreq|sh}}
-* Bulgarian: {{t|bg|Балкани|p|tr=balkani|sc=Cyrl}}
+* Bulgarian: {{t|bg|Балкани|p|tr=Balkani|sc=Cyrl}}
 * Catalan: {{t-|ca|Balcans|m|p}}
 * Chinese:
 *: Mandarin: {{t|zh|巴爾幹|sc=Hani}}, {{t|zh|巴尔干|tr=Bā'ěrgàn|sc=Hani}}, {{t|zh|巴爾幹半島|sc=Hani}}, {{t|zh|巴尔干半岛|tr=Bā'ěrgàn bàndǎo|sc=Hani}}
-* Croatian: {{t-|hr|Balkan|m}}
 * Finnish: {{t|fi|Balkan}}
 * French: {{t+|fr|Balkans|m}}
 * German: {{t|de|Balkan|m}}
 * Greek: {{t|el|Βαλκάνια|n|p|tr=Valkánia}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|Balkán}}
-* Japanese: {{t|ja|バルカン半島|tr=Barukan hantō|sc=Jpan}}
-* Macedonian: [[Балкан]] (Bálkan) {{m}}
+* Japanese: {{t|ja|バルカン半島|tr=[[Barukan hantō]]|sc=Jpan}}
+* Macedonian: {{t|mk|Балкан|m|tr=Bálkan}}
 * Polish: {{t+|pl|Bałkany}}
 * Portuguese: {{t-|pt|Balcãs|m|p}}
 * Romanian: {{t-|ro|Balcani|m|p}}, {{t|ro|Peninsula Balcanică|f}}
 * Russian: {{t-|ru|Балканы|m|p|tr=Balkány}}
-* {{trreq|sh}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|Балкан|m}}
-*: Roman: {{t|sh|Balkan|m}}
+*: Cyrillic: {{t|sh|Балкан|m|sc=Cyrl}}
+*: Latin: {{t|sh|Balkan|m|sc=Latn}}
 * Slovene: {{t|sl|Balkan|m|alt=Balkán}}
 * Swedish: {{t|sv|Balkan}}
 * Turkish: {{t+|tr|Balkanlar|p}}
