Added a template <SETI#16747245>

--- a/en/s/SETI.26210.wikitext
+++ b/en/s/SETI.26210.wikitext
@@ -5,7 +5,7 @@
 ==={{acronym}}===
 '''SETI'''
 
-# Search for [[extraterrestrial|Extraterrestrial]] Intelligence
+# {{astronomy}} {{acronym of|Search for [[extraterrestrial|Extraterrestrial]] Intelligence}}
 
 ====Derived terms====
 * [[OSETI]]
