--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -41,7 +41,7 @@
 ====Translations====
 {{trans-top|mammal of genus ''Sus''}}
 * Abau: {{tø|aau|huok}}
-* Afrikaans: [[vark]]
+* Afrikaans: [[vark]], {{t|af|vark}}
 * Agarabi: {{tø|agd|pon}}
 * Albanian: {{t-|sq|derr|m|xs=Albanian}}, {{t-|sq|thi|m|xs=Albanian}}
 * Ama: {{tø|amm|fu}}
@@ -62,8 +62,10 @@
 * Azeri: {{t+|az|donuz|xs=Azeri}}
 * Basque: [[urde]], [[zerri]], [[txerri]]
 * Belarusian: {{t|be|свіння|f|tr=svinnjá}}
+* Bengali: {{t|bn|শুওর|tr=shuor|sc=Beng}}
 * Breton: [[pemoc’h]] {{m}} [[moc'h]] {{p}}
 * Bulgarian: {{t+|bg|свиня|f|tr=svinjá}}
+* Burmese: {{t|my|ဝက်|tr=wé|sc=Mymr}}
 * Campidanese Sardinian: [[procu]] {{m}}, [[mannali]] {{m}}, [[sue]] {{f}}
 * Catalan: [[porc]] {{m}}
 * Cebuano: [[baboy]]
@@ -106,14 +108,17 @@
 * Irish: {{t+|ga|muc|f|xs=Irish}}
 * Italian: {{t+|it|maiale|m}}, {{t+|it|porco|m}}
 * Japanese: {{t|ja|豚|tr=[[ぶた]], buta}}, {{t|ja|ブタ|tr=buta|sc=Jpan}}
+* Kannada: {{t|kn|ಹಂದಿ|tr=handi|sc=Knda}}
 * Karelian: [[počči]]
 * Kazakh: {{t|kk|шошқа|tr=şoşqa|sc=Cyrl}}
+* {{trreq|Khmer}}
 * Korean: {{t|ko|돼지|tr=dwaeji|sc=Kore}}
 * Kuanua: {{tø|ksd|boroi}}
 * Kurdish: {{ku-Arab|[[به‌راز]]}} {{g|ku}}
 {{trans-mid}}
 * Kyrgyz: {{t|ky|чочко|tr=çoçko|sc=Cyrl}}
 * Ladin: [[porcel]]
+* Lao: {{t|lo|ໝູ|tr=mŭː|sc=Laoo}}
 * Latgalian: {{tø|ltg|cyuka|f}}
 * Latin: [[sus]] {{c}}, [[porcus]] {{m}}<!--do not put the scientific name here-->
 * Latvian: {{t+|lv|cūka|f|xs=Latvian}}
@@ -121,11 +126,12 @@
 * Lower Sorbian: [[swinja]] {{f}}
 * Macedonian: [[свиња]] (svinja) {{f}}
 * Malay: {{t+|ms|babi|xs=Malay}}, {{t+|ms|khinzir|xs=Malay}}
-* Malayalam: [[പന്നി]] (panni)
+* Malayalam: [[പന്നി]] (panni), {{t|ml|പന്നി|tr=panni|sc=Mlym}}
 * Maltese: {{t|mt|ħanżir|m}}
 * Maléku Jaíka: {{tø|gut|tunhífa}}
 * Maori: {{t-|mi|poaka|xs=Maori}}
 * Mazanderani: {{tø|mzn|خی}}
+* Mongolian: {{t|mn|гахай|tr=gahaj|sc=Cyrl}}
 * Montagnais: {{tø|moe|kukush}}
 * Nahuatl: {{t-|nah|pitzotl|xs=Nahuatl}}
 * Navajo: {{tø|nv|bisóodi}}
@@ -142,10 +148,12 @@
 * Russian: {{t+|ru|свинья|f|tr=svin’já}}
 * Sami: [[spiidni]]
 * Samoan: {{t|sm|pua'a|xs=Samoan}}
+* Sanskrit: {{t|sa|सूकरः|tr=sūkaraḥ|sc=Deva}}
 * Scottish Gaelic: [[muc]] {{f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|свиња|f}}
 *: Roman: {{t|sh|svinja|f}}
+* Sinhalese: {{t|si|ඌරා|tr=ūrā|sc=Sinh}}
 * Slovak: {{t|sk|prasa|n}}
 * Slovene: {{t|sl|svinja|f}}, {{t|sl|prašič|m}}, {{t|sl|pujs|m}}
 * Spanish: {{t|es|cerdo|m}}, [[chancho]] {{m}} {{qualifier|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, [[chon]] {{m}} {{qualifier|Northern Central Spain|specifically Cantabria}}, [[coche]] {{m}} {{qualifier|Guatemala}}, [[cochi]] {{m}} {{qualifier|Northwestern Mexico}}, [[cochín]] {{m}} {{qualifier|Northern Spain|specifically Aragon}}, [[cochino]] {{m}} {{qualifier|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, [[cocho]] {{m}} {{qualifier|Northern Spain|specifically Leon}}, [[cuchi]] {{m}} {{qualifier|Northern Central and Northwestern Argentina}}, [[cuto]] {{m}} {{qualifier|Northern Spain - specifically Aragon, La Rioja and Navarra}}, [[gocho]] {{m}} {{qualifier|Northern Spain|specifically Asturias and Leon}}, [[gorrino]] {{qualifier|Southern Central and Eastern Central Spain}}, [[guarro]] {{m}} {{qualifier|Western Spain|specifically Extremadura}}, [[marrano]] {{m}} {{qualifier|Central and Western Venezuela|Colombia}}, [[puerco]] {{m}} {{qualifier|Caribbean Islands|Costa Rica|Mexico|Panama}}, [[tocino]] {{m}} {{qualifier|Northern Spain|specifically Aragon}}, [[tunco]] {{m}} {{qualifier|El Salvador}}
