t+ka:[[მაინც]] ([[WT:EDIT|Assisted]]) <though#16753424>

--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -31,6 +31,7 @@
 * Dutch: {{t+|nl|echter}}
 * Finnish: {{t+|fi|kuitenkin}}
 * French: {{t+|fr|néanmoins}}
+* Georgian: {{t|ka|მაინც|sc=Geor}}
 * German: {{t|de|trotzdem}}, {{t|de|doch}}, {{t|de|allerdings}}
 * Greek: [[εν τούτοις]] (én tútis), [[παρά ταύτα]] (pará táfta), [[ωστόσο]] (ostóso)
 * Indonesian: [[bagaimanapun juga]]
