--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -77,6 +77,7 @@
 * Dutch: {{t+|nl|hoewel}}
 * Finnish: {{t+|fi|vaikka}}, (''if there's negation after though'') {{t|fi|vaikkakaan}}
 * French: {{t+|fr|malgré}}, {{t+|fr|bien que}}, {{t+|fr|cependant}}
+* Georgian: {{t|ka|მიუხედავად|sc=Geor}}
 * German: {{t+|de|obwohl}}
 * Greek: {{t|el|έστω και αν|tr=ésto ké án}}, {{t+|el|αν και|tr=án ké}}, {{t|el|μολονότι|tr=mólonóti}}, {{t|el|καίτοι|tr=kéti}}
 * Icelandic: {{t+|is|þó}}, {{t|is|þótt}}
