--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -111,7 +111,7 @@
 * Kannada: {{t|kn|ಹಂದಿ|tr=handi|sc=Knda}}
 * Karelian: [[počči]]
 * Kazakh: {{t|kk|шошқа|tr=şoşqa|sc=Cyrl}}
-* {{trreq|Khmer}}
+* Khmer: {{t|km|ជ្រូក|tr=jruuk|sc=Khmr}}
 * Korean: {{t|ko|돼지|tr=dwaeji|sc=Kore}}
 * Kuanua: {{tø|ksd|boroi}}
 * Kurdish: {{ku-Arab|[[به‌راز]]}} {{g|ku}}
