--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -79,7 +79,7 @@ The verb comes from the supposed cunningness of the weasel.
 {{trans-bottom}}
 
 {{trans-top|any mammal of the family ''Mustelidae''}}
-* Esperanto: {{qualifier|male or female}} {{t|vo|musteledo}}, {{qualifier|male}} {{t|vo|virmusteledo}}, {{qualifier|female}} {{t|vo|musteledino}}
+* Esperanto: {{qualifier|male or female}} {{t|eo|musteledo}}, {{qualifier|male}} {{t|eo|virmusteledo}}, {{qualifier|female}} {{t|eo|musteledino}}
 * Finnish: {{t-|fi|näätäeläin}}
 {{trans-mid}}
 * {{ttbc|id}}: [[luwak]]
