replace {{en-term}} →‎ {{term||lang=en}} using [[Project:AWB|AWB]] <oxythiomolybdate#16765951>

--- a/en/o/oxythiomolybdate.776624.wikitext
+++ b/en/o/oxythiomolybdate.776624.wikitext
@@ -1,7 +1,8 @@
 ==English==
+
 ===Etymology===
 
-{{en-term|oxy-}} + {{en-term|thio-}} + {{en-term|molybdate}}
+{{term|oxy-|lang=en}} + {{term|thio-|lang=en}} + {{term|molybdate|lang=en}}
 
 ===Pronunciation===
 
@@ -10,4 +11,4 @@
 ===Noun===
 {{en-noun}}
 
-#An [[anion]] containing [[molybdenum]], [[sulfur]], and [[oxygen]], specifically MoOS<sub>3</sub><sup>-2</sup>.
+# An [[anion]] containing [[molybdenum]], [[sulfur]], and [[oxygen]], specifically MoOS<sub>3</sub><sup>-2</sup>.
