/* Etymology */replace {{en-term}} →‎ {{term||lang=en}} using [[Project:AWB|AWB]] <felsic#16765952>

--- a/en/f/felsic.776709.wikitext
+++ b/en/f/felsic.776709.wikitext
@@ -2,7 +2,7 @@
 
 ===Etymology===
 
-{{blend|feldspar|silica}}, with the suffix {{en-term|-ic}}.
+{{blend|feldspar|silica}}, with the suffix {{term|-ic|lang=en}}.
 
 ===Adjective===
 {{en-adj}}
