--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -37,7 +37,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Czech: {{t-|cs|lasice|f}}
 * Danish: {{t+|da|brud|c}}
 * Dutch: {{t+|nl|wezel|f|m}}
-* Esperanto: {{qualifier|male or female}} {{t+|eo|vizelo}}, {{qualifier|male}} {{t|eo|virvizelo}}, {{qualifier|female}} {{t|eo|vizelino}}
+* Esperanto: {{qualifier|♂♀}} {{t+|eo|vizelo}}, {{qualifier|♂}} {{t|eo|virvizelo}}, {{qualifier|♀}} {{t|eo|vizelino}}
 * Estonian: {{t+|et|nirk}}
 * Finnish: {{t+|fi|lumikko}}
 * French: {{t+|fr|belette|f}}, {{t|fr|belette d'Europe|f}}, {{t|fr|belette pygmée|f}}, {{t|fr|petite belette|f}}
@@ -63,7 +63,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Slovene: {{t+|sl|podlasica|f}}
 * Spanish: {{t+|es|comadreja|f}}, {{t|es|mustela|f}}, {{t|es|turón|m}}
 * Turkish: {{t|tr|gelincik}}
-* Volapük: {{qualifier|male or female}} {{t|vo|visaf}}
+* Volapük: {{qualifier|♂♀}} {{t|vo|visaf}}
 * West Frisian: {{t+|fy|wezeling|c|xs=West Frisian}}
 {{trans-bottom}}
 
