--- a/en/e/ECG.26243.wikitext
+++ b/en/e/ECG.26243.wikitext
@@ -1,9 +1,9 @@
 ==English==
 
-==={{initialism}}===
-'''ECG'''
+===Initialism===
+{{en-initialism}}
 
-# {{cardiology}} [[electrocardiogram]]
+# {{cardiology}} {{initialism of|electrocardiogram}}
 
 ===Anagrams===
 * [[GCE#English|GCE]]
