--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -25,19 +25,21 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 {{trans-top|plant}}
 * Acholi: [[koo#Acholi|koo]]
 * Albanian: {{t+|sq|bambu|xs=Albanian}}
-* Arabic: {{t|ar|خيزران|m|tr=xayzaran or xayzuran|sc=Arab}}
+* Arabic: {{t|ar|خيزران|m|tr=xayzaran, xayzuran|sc=Arab}}
 *: [[Egyptian Arabic]]: {{tø|arz|خيزران|m|tr=xayzaran|sc=Arab}}, {{tø|arz|بامبو|m|tr=bambu|sc=Arab}}
-* Bengali: {{tø|bn|বাঁশ|tr=bāṁś|sc=Beng}}, {{t|bn|বাঁশ|tr=bãsh|sc=Beng}}
-* Bulgarian: {{t-|bg|бамбук}}
+* Bengali: {{t|bn|বাঁশ|tr=bãsh|sc=Beng}}
+* Bulgarian: {{t-|bg|бамбук|m|tr=bambúk}}
 * Catalan: {{t|ca|bambú|m}}
-* Chinese: [[竹材]], [[竹材]] (zhú cái)
+* Chinese:
+* Chinese:
+*: Mandarin: {{t|zh|竹子|tr=zhúzi|sc=Hani}}
 * Czech: {{t+|cs|bambus|m}}
 * Dutch: {{t+|nl|bamboe|n}}
 * Esperanto: {{t-|eo|bambuo|xs=Esperanto}}
 * Finnish: {{t+|fi|bambu}}
 * French: {{t+|fr|bambou|m}}
 * German: {{t+|de|Bambus|m}}
-* Greek: {{t+|el|μπαμπού|n}}, {{t|el|μπαμπού|n|tr=bamboú|sc=Grek}}
+* Greek: {{t+|el|μπαμπού|n|tr=bamboú|sc=Grek}}
 * Hebrew: {{t+|he|במבוק|m|tr=bambuq}}
 * Hindi: {{t|hi|बांस|tr=bāns|sc=Deva}}
 * Hungarian: {{t+|hu|bambusz}}
@@ -47,7 +49,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 *: Banjarese: [[paring]], [[buluh]]
 {{trans-mid}}
 * Italian: {{t-|it|bambù|m}}
-* Japanese: [[竹]] (たけ, take), {{t|ja|竹|tr=たけ, take|sc=Jpan}}
+* Japanese: {{t|ja|竹|tr=[[たけ]], take|sc=Jpan}}
 * Kannada: {{t+|kn|ಬಿದಿರು|tr=bidiru|sc=Knda|xs=Kannada}}
 * Lao: {{t-|lo|ໄມ້ໄຜ່|tr=mai-phai|sc=Laoo|xs=Lao}}
 * Latin: {{t|la|harundo Indica|f|alt=harundō Indica}}
@@ -55,21 +57,21 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Malay: [[pokok]] [[buluh]], {{t|ms|bambu}}
 * Navajo: {{tø|nv|lókʼaatsoh}}
 * Portuguese: {{t+|pt|bambu|m}}
-* Russian: {{t+|ru|бамбук|m}}, {{t|ru|бамбук|m|tr=bambúk|sc=Cyrl}}
+* Russian: {{t+|ru|бамбук|m|tr=bambúk|sc=Cyrl}}
 * Serbian: [[trskovača]] {{f}}
 * Slovene: {{t+|sl|bambus|m}}
 * Spanish: {{t-|es|bambú|m}}
 * Tagalog: [[kawayan]]
-* Thai: [[ไผ่]] (phai), {{t|th|ไผ่|tr=pài|sc=Thai}}
+* Thai: {{t|th|ไผ่|tr=pài|sc=Thai}}
 * Tok Pisin: {{t|tpi|mambu}}
 * Volapük: {{t|vo|bambud}}, {{qualifier|obsolete}} {{t|vo|lerid}}
 {{trans-bottom}}
 
 {{trans-top|wood}}
 * Albanian: {{t+|sq|bambu|xs=Albanian}}
-* Bulgarian: {{t-|bg|бамбук}}
+* Bulgarian: {{t-|bg|бамбук|m|tr=bambúk}}
 * Catalan: {{t|ca|bambú|m}}
-* Chinese: [[竹子]], [[竹子]] (zhú zi)
+* Chinese:
 *: Mandarin: {{t|zh|竹子|tr=zhúzi|sc=Hani}}, {{t|zh|竹材|tr=zhúcái|sc=Hani}}
 * Czech: {{t|cs|bambus|m}}
 * Dutch: {{t+|nl|bamboe|n}}
@@ -79,13 +81,13 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 {{trans-mid}}
 * Hebrew: {{t+|he|במבוק|m|tr=bambuq}}
 * Italian: {{t-|it|bambù|m}}
-* Japanese: [[竹材]] (たけざい, takezai), {{t|ja|竹材|tr=たけざい, takezai|sc=Jpan}}
+* Japanese: {{t|ja|竹|tr=[[たけ]], take|sc=Jpan}}, {{t|ja|竹材|tr=たけざい, takezai|sc=Jpan}}
 * Macedonian: {{t-|mk|бамбус|m|tr=bámbus}}
 * Portuguese: {{t+|pt|bambu|m}}
-* Russian: {{t+|ru|бамбук|m}}, {{t|ru|бамбук|m|tr=bambúk|sc=Cyrl}}
+* Russian: {{t+|ru|бамбук|m|tr=bambúk|sc=Cyrl}}
 * Slovene: {{t+|sl|bambus|m}}
 * Tagalog: [[kawayan]]
-* Thai: [[ไม้ไผ่]] (mai phai), {{t|th|ไม้ไผ่|tr=máai pài|sc=Thai}}
+* Thai: {{t|th|ไม้ไผ่|tr=máai pài|sc=Thai}}
 * Tok Pisin: {{t|tpi|mambu}}
 {{trans-bottom}}
 
