t+zkg:[[烏斯含]] ([[WT:EDIT|Assisted]]) <rabbit#16783080>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -77,6 +77,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Galician: [[coello]]
 * Georgian: {{t|ka|ბოცვერი|tr=botc'veri|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Kaninchen|n}}
+* Goguryeo: {{tø|zkg|烏斯含|tr=eosaham}}
 * Greek: {{t+|el|κουνέλι|n|tr=kounéli}}
 *: Ancient: {{tø|grc|κούνικλος|m|tr=kouniklos|sc=polytonic}}
 * Gujarati: [[સસલું]] (saslu.n)
