/* Adjective */ Anton++ <simple#16791033>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -34,6 +34,7 @@ From {{etyl|enm}} {{term|simple|lang=enm}}, from {{etyl|fro}} and {{etyl|fr}} {{
 
 ====Antonyms====
 * {{sense|having few parts or features}} [[complex]], [[compound]], [[complicated]]
+* {{sense|uncomplicated}} [[subtle]]
 
 ====Derived terms====
 {{der-top}}
