--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -21,14 +21,12 @@
 {{trans-top|the mammal ''Mustela putorius furo''}}
 * Albanian: [[qelbësi]]
 * Basque: [[hudo]]
-* Belarusian: [[тхор афрыканскі]], {{t|be|тхор|m|tr=txor|sc=Cyrl}}
-* Bosnian: {{t-|bs|tvor|m}}
+* Belarusian: {{t|be|тхор|m|tr=txor|sc=Cyrl}}
 * Breton: [[fured]]
-* Bulgarian: [[пор]] (por)
+* Bulgarian: {{t|bg|пор|m|tr=por|sc=Cyrl}}
 * Catalan: [[furó]], [[fura]]
 * Chinese:
 *: Mandarin: {{t|zh|雪貂|tr=xuědiāo|sc=Hani}}
-* Croatian: {{t+|hr|tvor}}
 * Czech: {{t-|cs|fretka|f}}
 * Danish: {{t-|da|fritte|c}}
 * Dutch: {{t+|nl|fret|m}}
@@ -43,36 +41,35 @@
 * Hungarian: {{t-|hu|vadászgörény}}
 * Irish: {{t|ga|firéad|m}}
 * Italian: {{t+|it|furetto|m}}
-* Japanese: [[フェレット]] (feretto), {{t|ja|フェレット|tr=feretto|sc=Jpan}}
+* Japanese: {{t|ja|フェレット|tr=feretto|sc=Jpan}}
 * Korean: {{t|ko|페레트|tr=pereteu|sc=Kore}}
 * Latvian: [[okšķeris]]
 * Lithuanian: {{t+|lt|šeškas|m|xs=Lithuanian}}
 {{trans-mid}}
-* Macedonian: [[ласица]]
+* Macedonian: {{t-|mk|ласица|f|tr=lásica}} <!-- weasel ?-->
 * Maltese: {{t-|mt|nemes|xs=Maltese}}
 * Navajo: {{tø|nv|dlǫ́ʼii}}
 * Norwegian: {{t|no|frett}}
 * Occitan: [[fura]]
-* Polish: {{t+|pl|fretka}}
+* Polish: {{t+|pl|fretka|f}}
 * Portuguese: [[furão]] {{m}}
-* Romanian: [[nevăstuică]]
+* Romanian: {{t|ro|nevăstuică|f}}
 * Romansch: [[furet]]
-* Russian: [[хорёк африканский]] (horjok afrikanskij), {{t|ru|хорёк|m|tr=xorjók|sc=Cyrl}}
+* Russian: {{t|ru|хорёк|m|tr=xorjók|sc=Cyrl}}
 * Sami: [[albinočáhppesbuoidda]], [[ferrehtta]]
 * Sardinian: [[furittu]], [[fughittu]]
 * Scots: [[futret]] (''Doric dilect'')
 * Scottish Gaelic: {{t-|gd|neas|f|xs=Scottish Gaelic}}, {{t-|gd|fearaid|f|xs=Scottish Gaelic}}
-* Serbian: [[vretna]] {{f}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|твор|m}}
-*: Roman: {{t|sh|tvor|m}}
-* Slovak: [[fretka tchorovitá]], {{t|sk|fretka|f}}
-* Slovene: [[beli dihur]] {{m}}, {{t|sl|dihur|m}}
+*: Cyrillic: {{t|sh|твор|m}}, {{t|sh|вретна|f}}
+*: Roman: {{t|sh|tvor|m}}, {{t|sh|vretna|f}}
+* Slovak: {{t|sk|fretka|f}}
+* Slovene: {{t|sl|dihur|m}}
 * Spanish: {{t+|es|hurón|m}}
 * Swedish: {{t|sv|tamiller}}
 * Tamil: {{t|ta|மரநாய் வகை|tr=ma.ra.nai |sc=Taml}}
 * Turkish: [[yaban]], [[dağ gelinciği]]
-* Ukrainian: [[тхiр африканский]] (txir afrykanskyj), {{t|uk|тхiр|m|tr=txir|sc=Cyrl}}
+* Ukrainian: {{t|uk|тхiр|m|tr=txir|sc=Cyrl}}
 * Upper Sorbian: [[łasyčka]]
 * Welsh: [[ffured]]
 * West Frisian: [[fret]]
