t+sq:[[qelbësi]] t+tr:[[yaban]] t+tr:[[dağ gelinciği]] t-balance ([[WT:EDIT|Assisted]]) <ferret#16798783>

--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -19,7 +19,7 @@
 
 ====Translations====
 {{trans-top|the mammal ''Mustela putorius furo''}}
-* Albanian: [[qelbësi]]
+* Albanian: [[qelbësi]], {{t|sq|qelbësi}}
 * Basque: [[hudo]]
 * Belarusian: {{t|be|тхор|m|tr=txor|sc=Cyrl}}
 * Breton: [[fured]]
@@ -45,8 +45,8 @@
 * Korean: {{t|ko|페레트|tr=pereteu|sc=Kore}}
 * Latvian: [[okšķeris]]
 * Lithuanian: {{t+|lt|šeškas|m|xs=Lithuanian}}
-{{trans-mid}}
 * Macedonian: {{t-|mk|ласица|f|tr=lásica}} <!-- weasel ?-->
+{{trans-mid}}
 * Maltese: {{t-|mt|nemes|xs=Maltese}}
 * Navajo: {{tø|nv|dlǫ́ʼii}}
 * Norwegian: {{t|no|frett}}
@@ -68,7 +68,7 @@
 * Spanish: {{t+|es|hurón|m}}
 * Swedish: {{t|sv|tamiller}}
 * Tamil: {{t|ta|மரநாய் வகை|tr=ma.ra.nai |sc=Taml}}
-* Turkish: [[yaban]], [[dağ gelinciği]]
+* Turkish: [[yaban]], [[dağ gelinciği]], {{t|tr|yaban}}, {{t|tr|dağ gelinciği}}
 * Ukrainian: {{t|uk|тхiр|m|tr=txir|sc=Cyrl}}
 * Upper Sorbian: [[łasyčka]]
 * Welsh: [[ffured]]
