--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -19,7 +19,7 @@
 
 ====Translations====
 {{trans-top|the mammal ''Mustela putorius furo''}}
-* Albanian: [[qelbësi]], {{t|sq|qelbësi}}
+* Albanian: {{t|sq|qelbësi}}
 * Basque: [[hudo]]
 * Belarusian: {{t|be|тхор|m|tr=txor|sc=Cyrl}}
 * Breton: [[fured]]
@@ -37,7 +37,7 @@
 * Friulian: [[pudîs blanc]]
 * Galician: [[furón]]
 * German: {{t+|de|Frettchen|n}}
-* Greek: {{t+|el|κουνάβι|n}}, {{t|el|νυφίτσα|f|tr=nyfítsa|sc=Grek}}
+* Greek: {{t+|el|κουνάβι|n|tr=kounávi}}, {{t|el|νυφίτσα|f|tr=nyfítsa|sc=Grek}}
 * Hungarian: {{t-|hu|vadászgörény}}
 * Irish: {{t|ga|firéad|m}}
 * Italian: {{t+|it|furetto|m}}
@@ -68,7 +68,7 @@
 * Spanish: {{t+|es|hurón|m}}
 * Swedish: {{t|sv|tamiller}}
 * Tamil: {{t|ta|மரநாய் வகை|tr=ma.ra.nai |sc=Taml}}
-* Turkish: [[yaban]], [[dağ gelinciği]], {{t|tr|yaban}}, {{t|tr|dağ gelinciği}}
+* Turkish: {{t|tr|yaban}}, {{t|tr|dağ gelinciği}}
 * Ukrainian: {{t|uk|тхiр|m|tr=txir|sc=Cyrl}}
 * Upper Sorbian: [[łasyčka]]
 * Welsh: [[ffured]]
