--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -59,7 +59,7 @@
 * Japanese: {{t|ja|シーディー|tr=sīdī}},  {{t+|ja|CD|tr=sīdī}},  {{t-|ja|ＣＤ|tr=sīdī}}
 * Korean: {{t|ko|시디|tr=si-di|sc=Hang}}
 * [[Macedonian]]: {{t|mk|це-де|n|tr=ce-de}}
-* {{trreq|Persian}}
+* Persian: {{t|fa|سی‌دی|tr=sidi|sc=fa-Arab}}
 * Russian: {{qualifier|indeclinable}} {{t+|ru|CD|m|tr=si-di}},  {{qualifier|indeclinable}} {{t|ru|си-ди|m|tr=si-di}}
 * {{trreq|Vietnamese}}
 {{trans-bottom}}
