--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -190,6 +190,7 @@ From {{etyl|la}} {{term|divisio|lang=la}}, noun of process form from perfect pas
 * Khmer: {{t|km|សាខា|tr=sar khar|sc=Khmr}}
 {{trans-mid}}
 * Swahili: {{t+|sw|ugavi|xs=Swahili}}, {{t+|sw|farakano|xs=Swahili}}
+* Telugu: {{t+|te|విభాగము}}
 * Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
 * West Frisian: {{t-|fy|klasse|c|xs=West Frisian}}
 {{trans-bottom}}
