--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -122,6 +122,15 @@ From {{etyl|ang}} verb {{term|beodan|bēodan|offer, announce|lang=ang}}. Conflat
 #: ''Their efforts represented a sincere '''bid''' for success.''
 #: ''She put in her '''bid''' for the presidency.''
 #: ''He put in his '''bid''' for office.''
+#*{{quote-news
+|year=2012
+|date=May 13
+|author=Alistair Magowan
+|title=Sunderland 0-1 Man Utd
+|work=BBC Sport
+|url=http://www.bbc.co.uk/sport/0/football/17973162
+|page=
+|passage=Then, as the Sunderland fans' cheers bellowed around the stadium, United's title '''bid''' was over when it became apparent City had pinched a last-gasp winner to seal their first title in 44 years.}}
 #* '''1967''', [[w:William F. Nolan|William F. Nolan]] and [[w:George Clayton Johnson|George Clayton Johnson]], [[w:Logan's Run|''Logan's Run'']], May 1976 [[w:Bantam Books|Bantam]] edition, ISBN 0553025171, page 16:
 #*: [Running,] Doyle had passed up a dozen chances to go underground. He was swinging east again making another '''bid''' for Arcade.
 
