t+el:[[λυγίζω]] ([[WT:EDIT|Assisted]]) <bend#16818437>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -61,6 +61,7 @@ From {{etyl|enm}} {{term|benden}}, from {{etyl|ang}} {{term|bendan||to bind or b
 * Finnish: {{t+|fi|taivuttaa}}
 * French: {{t+|fr|courber}}
 * German: {{t+|de|beugen}}
+* Greek: {{t|el|λυγίζω|sc=Grek}}
 * Hebrew: {{t|he|כופף|tr=koféf}}
 * Hungarian: {{t+|hu|hajlít}}, {{t+|hu|görbít}}
 * Icelandic: {{t|is|beygja}}
