--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -72,7 +72,9 @@ From {{etyl|enm}} {{term|at|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, 
 * Italian: {{t+|it|a}}, {{t+|it|in}}
 * Japanese: [[で]] (de), [[に]] (ni)
 * Korean: [[~에서]] (~eseo)
-* Kurdish: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
+* Kurdish:
+** Kurmanji [[li]] 
+** Sorani: ([[le]])
 * Latin: ''[[dative case]]'', {{t|la|in}}
 {{trans-mid}}
 * Macedonian: {{t-|mk|во|tr=vo}}, {{t-|mk|на|tr=na}}, {{t-|mk|кај|tr=kaj}}
@@ -126,7 +128,9 @@ From {{etyl|enm}} {{term|at|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, 
 * Japanese: [[に]] (ni)
 {{trans-mid}}
 * Korean: [[~에]] (~e)
-* Kurdish: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
+* Kurdish: 
+** Kurmanji: [[li]]
+** Sorani: ([[le]])
 * Latin: ''[[ablative]] case''
 * Macedonian: {{t-|mk|во|tr=vo}}
 * Maltese: {{t-|mt|fi|xs=Maltese}}
@@ -165,7 +169,9 @@ From {{etyl|enm}} {{term|at|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, 
 * Japanese: [[に]] (ni), [[を]] (o)
 {{trans-mid}}
 * Korean: [[~에게]] (-ege)
-* Kurdish: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
+* Kurdish:
+** Kurmanji: [[li]]
+** Sorani: ([[le]])
 * Latin: {{t|la|ad}}
 * Macedonian: {{t-|mk|во|tr=vo}}, {{t-|mk|на|tr=na}}
 * Norwegian: {{t+|no|på}}
