t+fa:[[تبلیغ]] ([[WT:EDIT|Assisted]]) <advertisement#16828968>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -78,6 +78,7 @@ From {{etyl|frm}} {{term|advertissement||statement calling attention|lang=frm}},
 * Maltese: [[riklam]], [[pubbliċità]], [[tgħarif kummerċjali]]
 * Navajo: {{tø|nv|óʼoolkąąh}}
 * Norwegian: {{t|no|reklame}} {{t|no|annonse}}
+* Persian: {{t|fa|تبلیغ|tr=tabliğ|sc=fa-Arab}}
 * Polish: {{t+|pl|ogłoszenie|n}}, {{t+|pl|reklama|f}}, {{t-|pl|anons|m}}
 * Portuguese: {{t+|pt|anúncio|m}}, {{t+|pt|publicidade|f}}, {{t+|pt|reclame|m}}, {{t+|pt|propaganda|f}}
 * Romanian: [[anunț]] {{n}} [[publicitate]] {{f}}, [[reclamă]] {{f}}
