/* Serbo-Croatian */ <bend#16831331>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -256,7 +256,7 @@ From {{etyl|en|sh}} {{term|band|lang=en}}.
 ===Noun===
 {{sh-noun|g=m|head=bȅnd|r|бенд|бе̏нд}}
 
-# [[band]] (group of musicians)
+# {{music|lang=sh}} [[band]] (group of musicians)
 
 ====Declension====
 {{sh-decl-noun
@@ -268,8 +268,6 @@ From {{etyl|en|sh}} {{term|band|lang=en}}.
 |bendu|bendovima / bendima
 |bendom|bendovima / bendima
 }}
-
-[[Category:sh:Music]]
 
 [[ar:bend]]
 [[cs:bend]]
