--- a/en/p/phylloxera.746072.wikitext
+++ b/en/p/phylloxera.746072.wikitext
@@ -12,6 +12,7 @@
 * Hungarian: {{t|hu|filoxéra}}
 {{trans-mid}}
 * Italian: {{t-|it|fillossera|f}}
+* Romanian: {{t|ro|filoxeră|f}}
 {{trans-bottom}}
 
 ====External links====
