--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -4,7 +4,7 @@
 From {{proto|Indo-European|ḱwṓ|lang=grc}}. Cognates include Latin {{term|canis|lang=la}}, Sanskrit {{term|sc=Deva|श्वन्|tr=śván|lang=sa}} and Old English {{term|hund|lang=ang}} (English {{term|hound}}).
 
 ===Pronunciation===
-{{grc-ipa-rows|kj|u'|oo|n}}
+{{grc-ipa-rows|kj|u'|.|oo|n}}
 
 ===Noun===
 {{grc-noun|κυνός|m & f|third|kuōn|κυων}}
