{{en-interj}} using [[Project:AWB|AWB]] <good Lord#16849483>

--- a/en/g/good Lord.741512.wikitext
+++ b/en/g/good Lord.741512.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Interjection===
-'''[[good]] [[Lord]]!'''
+{{en-interj|head=[[good]] [[Lord]]!}}
 
 # An exclamation of [[amazement]].
 
@@ -16,5 +16,3 @@
 
 ====Synonyms====
 See [[Wikisaurus:wow]]
-
-[[Category:English interjections]]
