t+es:[[tomar]] ([[WT:EDIT|Assisted]]) <seize#16853127>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -80,6 +80,7 @@ Earlier {{term|seise|lang=en}}, from {{etyl|enm}} {{term|seisen|lang=enm}}, {{te
 * French: {{t+|fr|saisir}}
 * Norwegian: {{t-|no|gripe}}
 * Portuguese: {{t|pt|aproveitar}}
+* Spanish: {{t|es|tomar}}
 {{trans-bottom}}
 
 ===References===
