--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -219,6 +219,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}, from {{p
 *: Cyrillic: [[ствар]] {{f}}
 *: Roman: [[stvar]] {{f}}
 * Slovene: {{t+|sl|stvar|f}}, {{t-|sl|reč|f}}
+* Southern Amami-Oshima: {{tø|ams|むん|tr=mun}}
 * Spanish: {{t+|es|cosa|f}}
 * Swahili: [[kitu]], [[vitu]] ''pl (noun 7/8)''
 * Swedish: {{t+|sv|sak|c}}, {{t+|sv|ting|n}}
