--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -55,7 +55,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Azeri: {{t+|az|dovşan|xs=Azeri}}
 * Basque: [[untxi]]
 * Belarusian: {{t-|be|трус|m|tr=trus|xs=Belarusian}}, {{t|be|кролік|m|tr=królik|sc=Cyrl}} <!-- [[трусяня]] {{n}} [[трусяне]] {{p}} means baby rabbit(s) -->
-* Bengali: {{t|bn|খরগোশ|tr=khôrgosh|sc=Beng}}, {{t|bn|খরেগাশ|tr=khôrgosh|sc=Beng}}
+* Bengali: {{t|bn|খরগোশ|tr=khôrgosh|sc=Beng}}
 * Breton: [[lapin]], [[konikl]]
 * Bulgarian: {{t+|bg|заек|m|tr=zaek}}
 * Catalan: {{t+|ca|conill}}
@@ -82,7 +82,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 *: Ancient: {{tø|grc|κούνικλος|m|tr=kouniklos|sc=polytonic}}
 * Gujarati: [[સસલું]] (saslu.n)
 * Hebrew: {{t|he|ארנב|m|tr=arnáv}}
-* Hindi: {{t|hi|ख़रगोश|m|tr=xargoś|sc=Deva}}, {{t|hi|ख़रगोशनी|f|tr=xargośanī|sc=Deva}}
+* Hindi: {{t|hi|ख़रगोश|m|tr=xargoś|sc=Deva}}, {{t|hi|शशक|m|tr=śaśak|sc=Deva}}
 * Hopi: {{tø|hop|taavo}}
 * Hungarian: {{t+|hu|nyúl}}
 * Icelandic: {{t+|is|kanína}}
@@ -149,7 +149,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Tzotzil: [[t'ul]]
 * Ukrainian: {{t|uk|кріль|m|tr=kril’|xs=Ukrainian}}, {{t+|uk|кролик|m|tr=królyk|xs=Ukrainian}}
 * Upper Sorbian: [[nukl]]
-* Urdu: {{t|ur|خرگوش|m|tr=xargoś|sc=ur-Arab}}, {{t|ur|سسا|m|tr=susā|sc=ur-Arab}}
+* Urdu: {{t|ur|خرگوش|m|tr=xargoś|sc=ur-Arab}}, {{t|ur|ششک|m|tr=śaśak|sc=ur-Arab}}
 * Uzbek: {{t|uz|quyon}}
 * Venetian: {{tø|vec|cunicio|m}}
 * Vietnamese: {{t|vi|thỏ}}
