--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -95,6 +95,7 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 * Czech: {{t+|cs|druh|m}}
 * Danish: {{t+|da|art|c}}
 * Finnish: {{t+|fi|laji}}
+* German: {{t|de|Art|f}}, {{t|de|Spezies|f}}, {{t|de|Species|f}}
 * Italian: {{t+|it|specie|f}}
 * Japanese: {{t+|ja|種|tr=shu}} ([[しゅ]])(''academic''), {{t+|ja|類|tr=rui}} ([[るい]]), {{t+|ja|種類|tr=shurui}} ([[しゅるい]]){{qualifier|colloquial}}
 * Khmer: {{t|km|ប្រភេទ|tr=bro phet|sc=Khmr}}
@@ -107,6 +108,7 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 * Spanish: {{t+|es|especie}}
 * Swedish: {{t+|sv|art|c}}
 * Turkish: {{t|tr|tür}}
+* Volapük: {{t|vo|sot}}
 {{trans-bottom}}
 
 {{trans-top|mineralogy: mineral with a unique chemical formula}}
