--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -59,6 +59,7 @@
 * Irish: {{t+|ga|cat crainn|xs=Irish}}
 * Italian: {{t+|it|martora|f}}
 * Japanese: {{t|ja|テン|tr=ten|sc=Jpan}}
+* Jèrriais: {{tø|roa-jer|martre|f}}
 * Korean: {{t|ko|담비|tr=dam bi|sc=Kore}}
 {{trans-mid}}
 * Korean: {{t|ko|담비|tr=dam bi|sc=Kore}}
