--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -123,7 +123,7 @@ To ask for an object, use ''[[quan]]'' instead.
 #: ''ens qua ens'' ("being as being")
 
 ===Etymology 2===
-Inflection of {{term|qui|quī|who, which|lang=la}}:  Sanscr. kis; Gr. τίς
+Inflection of {{term|qui|quī|who, which|lang=la}}:  Sanskrit {{term||kis|tr=kis|lang=sa}}; Ancient Greek {{term|τίς|lang=grc}}. {{rfscript|Deva}}
 
 ====Pronoun====
 {{la-pronoun-form|quā}}
