--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -2,7 +2,7 @@
 [[File:Veasel.jpg|thumb|right|''Mustela erminea'']]
 
 ===Etymology===
-From {{etyl|enm}} {{term|ermine|lang=enm}}, {{term|ermin|lang=enm}}, {{term|ermyn|lang=enm}}, from {{etyl|fro}} {{term|ermin|lang=fro}}, {{term|ermine|lang=fro}}, {{term|hermine||ermine|lang=fro}}, of {{etyl|gem}} origin, from {{etyl|frk}} *{{term||harmo, *harmin-|ermine, stoat, weasel|lang=frk}}, from {{proto|Germanic|harmô|weasel|lang=en}}, from {{proto|Indo-European|ḱerǝm-|weasel|lang=en}}. Cognate with {{etyl|goh|-}} {{term|harmo||ermine, stoat, weasel|lang=goh}}, {{etyl|odt|-}} {{term|harm||weasel|lang=odt}}, {{etyl|ang|-}} {{term|hearma||fieldmouse, dormouse, weasel|lang=ang}}. Compare also {{etyl|de|-}} {{term|Hermelin||ermine|lang=de}}. More at {{l|en|ermelin}}.
+From {{etyl|enm}} {{term|ermine|lang=enm}}, {{term|ermin|lang=enm}}, {{term|ermyn|lang=enm}}, from {{etyl|fro}} {{term|ermin|lang=fro}}, {{term|ermine|lang=fro}}, {{term|hermine|lang=fro}}, from {{etyl|odt|-}} {{recons|harmino|lang=odt}} ‘stoat skin’, from {{recons|harmo|lang=odt}} ‘stoat, weasel’ (compare Dutch dialectal {{term|herm|lang=nl}}), from {{proto|Germanic|harmōn|lang=en}} (compare Old English {{term|hearma|lang=ang}}, obsolete German {{term|Harm|lang=de}}), from {{proto|Indo-European|ḱormon|lang=en}} (compare Romansch {{term|carmun|lang=rm}}, Lithuanian {{term|sarmuo|sarmuõ|lang=lt}}).
 
 Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{term|Armenius|lang=la||Armenian mouse}} is without any foundation. <ref>{{R:Century 1911}}</ref>
 
