--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -103,10 +103,9 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * Slovak: {{t|sk|jazvec|m}}
 * Slovene: {{t+|sl|jazbec|m}}
 * Spanish: {{t+|es|tejón|m}}
-* Swahili: {{t|sw|melesi}}, {{t|sw|pomboo}}
+* Swahili: {{t|sw|melesi}}
 * Swedish: {{t+|sv|grävling|c}}
 * [[Taos]]: [[kòlno’óna]]
-* Thai: {{t|th|รบกวน|tr=rbkwn|sc=Thai}}
 * Turkish: {{t+|tr|porsuk}}
 * Ukrainian: {{t+|uk|борсук|m|tr=borsúk|xs=Ukrainian}}
 * [[Upper Sorbian]]: [[šwinc]] {{m}}
