--- a/en/a/aboil.855995.wikitext
+++ b/en/a/aboil.855995.wikitext
@@ -3,6 +3,8 @@
 ===Etymology===
 {{prefix|a|boil|gloss1=in, on}}
 
+===Pronunciation===
+{{a|US}} {{IPA|/ə.ˈbɔɪl/|/ə.ˈbɔɪəl/}}
 ===Adjective===
 {{en-adj}}
 
