--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -31,6 +31,10 @@ From {{etyl|la}} {{term|qua||in the capacity of|lang=la}}.
 * Dutch: [[qua#Dutch|qua]], [[als zodanig]], [[wat betreft]]
 {{trans-bottom}}
 
+===Preposition===
+{{en-prep}}
+# in the capacity of
+
 ===Anagrams===
 * [[QAU#English|QAU]]
 
