--- a/en/j/Jacobin.855478.wikitext
+++ b/en/j/Jacobin.855478.wikitext
@@ -1,12 +1,19 @@
 ==English==
+{{wikipedia}}
+===Etymology===
+From {{etyl|frm}} {{term|Jacobin|lang=fr}}, ultimately from {{etyl|la}} {{term|Jacobus|Jacōbus|Jacob}}.
+
+===Pronunciation===
+*{{a|UK}} {{IPA|/ˈdʒakəbɪn/}}
 
 ===Noun===
-{{wikipedia}}
 {{en-noun}}
 
-# A member of the most radical club founded during the French Revolution, which instituted the Reign of Terror.
-# An extreme political [[radical]].
-# A [[Dominican]] [[friar]] 
+# A [[Dominican]] [[friar]].
+# A member of a radical French political club founded (at an old Jacobin convent) in 1789 and one of the driving forces of the French Revolution.
+#*'''2002''', {{w|Colin Jones (historian)|Colin Jones}}, ''The Great Nation'', Penguin 2003, p. 429-30:
+#*:The '''Jacobins''' acted as a left-of-centre parliamentary pressure group, spending much of their time in coordinating the following day's business in the Assembly.
+# By extension, a political [[radical]].
 # A [[breed]] of [[domestic pigeon]] (known for its feathered hood over its head).
 
 ===References===
