t+es:[[hacerse la América]] ([[WT:EDIT|Assisted]]) <make a killing#16902457>

--- a/en/m/make a killing.742288.wikitext
+++ b/en/m/make a killing.742288.wikitext
@@ -19,7 +19,7 @@
 * Finnish: [[tienata]] [[hyvä|hyvät]] [[raha|rahat]], {{t|fi|lyödä rahoiksi}}
 {{trans-mid}}
 * Romanian: {{t|ro|a da lovitura}}
-* Spanish: {{t|es|hacer su agosto}}
+* Spanish: {{t|es|hacer su agosto}}, {{t|es|hacerse la América}}
 {{trans-bottom}}
 
 [[Category:English predicates]]
