t+ka:[[მერე]] t-balance t+ka:[[კვლავ]] ([[WT:EDIT|Assisted]]) <then#16911178>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -100,7 +100,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Esperanto: {{t-|eo|tiam|xs=Esperanto}}
 * Finnish: {{t+|fi|sitten}}
 * French: {{t+|fr|puis}}
-* {{trreq|Georgian}}
+* Georgian: {{t|ka|მერე|tr=mere|sc=Geor}}, {{t|ka|კვლავ|tr=kvlav|sc=Geor}}
 * Hindi: {{t|hi|फिर|tr=phir|sc=Deva}}
 * Hungarian: {{t+|hu|aztán}}, {{t+|hu|azután}}, {{t+|hu|majd}}
 * Ido: {{t+|io|lore|xs=Ido}}
@@ -109,8 +109,8 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Japanese: {{t|ja|それから|tr=sorekara}}, {{t|ja|その後|tr=sono ato}}, {{t|ja|その後|tr=sono go}}, {{t-|ja|そして|tr=soshite}}
 * Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
 * Latin: {{t|la|deinde}}, {{t|la|exinde}}
-{{trans-mid}}
 * Luxembourgish: {{t|lb|dunn}}
+{{trans-mid}}
 * Malay: [[tidak lama kemudian]]
 * Norwegian: {{t+|no|så}}, {{t|no|deretter}}, {{t+|no|siden}}
 * Old English: {{t-|ang|þa|alt=þā|xs=Old English}}
