--- a/en/g/greenlight.746549.wikitext
+++ b/en/g/greenlight.746549.wikitext
@@ -13,7 +13,7 @@ From {{term|green light}}
 
 ====Synonyms====
 * {{sense|approve}} [[allow]], [[approve]], [[give]] the [[go-ahead]], give the green light, [[permit]]
-====Antonym====
+====Antonyms====
 * [[redlight]]
 
 ====Translations====
