quote and rfdef <bubble#16912084>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -32,6 +32,15 @@ Partly imitative, also influenced by {{term|burble}}.
 |passage=Thomas, so often West Brom's most positive attacker down their left side and up against Salgado, twice almost burst the '''bubble''' of excitement around the ground but he had two efforts superbly saved by Robinson. }}
 # {{figuratively}} a feverish surge of speculation in a financial market, usually followed by a [[market]] [[crash]] (eg the [[w:South Sea Bubble]]).
 # {{Cockney rhyming slang}} a [[Greek]] (''also:'' [[bubble and squeak]])
+# {{figurative}} {{rfdef|lang=en}}
+#* {{quote-news
+|year=2012
+|date=June 3
+|author=Nathan Rabin
+|title=TV: Review: THE SIMPSONS (CLASSIC): “Mr. Plow” (season 4, episode 9; originally aired 11/19/1992)
+|url=http://www.avclub.com/articles/mr-plow,75560/
+|page=
+|passage=He’s wrapped up snugly in a cozy '''bubble''' of self-regard, talking for his own sake more than anyone else’s. }}
 
 ====Translations====
 {{trans-top|spherically contained volume of air}}
