--- a/en/s/she-goat.802749.wikitext
+++ b/en/s/she-goat.802749.wikitext
@@ -25,8 +25,9 @@
 * [[he-goats#English|he-goats]]
 * [[hostage#English|hostage]]
 
-[[Category:English terms spelled with -]]
 [[Category:en:Goats]]
+[[Category:English terms spelled with -]]
+[[Category:English terms spelled with she-]]
 
 [[et:she-goat]]
 [[fr:she-goat]]
