/* English */ ===Verb===  {{en-verb}}    # {{nautical|transitive}} To [[tighten]] (e.g. slack standing [[rigging]]) by bringing the opposite [[shroud]]s nearer. <swifter#16948364>

--- a/en/s/swifter.720151.wikitext
+++ b/en/s/swifter.720151.wikitext
@@ -5,5 +5,10 @@
 
 # {{comparative of|swift}}
 
+===Verb===
+{{en-verb}}
+
+# {{nautical|transitive}} To [[tighten]] (e.g. slack standing [[rigging]]) by bringing the opposite [[shroud]]s nearer.
+
 [[fr:swifter]]
 [[hu:swifter]]
