/* Translations */ checked ja <bubble#16956571>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -129,6 +129,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * Greek: {{t+|el|φούσκα|f|tr=foúska|sc=Grek}}
 * Hebrew: {{t+|he|בועה|f|tr=bu'a}}
 * Italian: {{t+|it|bolla|f}}
+* Japanese: {{t|ja|バブル|tr=baburu}}
 * Spanish: {{t+|es|burbuja|f}}
 * Telugu: {{t|te|బుడగ|tr=buDaga}}
 {{trans-bottom}}
@@ -138,7 +139,6 @@ Partly imitative, also influenced by {{term|burble}}.
 * {{ttbc|ka}}: [[ბჟშტი]]
 * {{ttbc|id}}: [[gelembung]]
 {{trans-mid}}
-* {{ttbc|ja}}: [[泡]] ([[あわ]], awa), [[バブル]] (baburu)
 * {{ttbc|ko}}: [[거품]] (geopum)
 * {{ttbc|lt}}: [[burbulas]] {{m}}
 {{trans-bottom}}
