/* Adverb */ whoops <again#16957429>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -32,7 +32,7 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 #* '''1485''', {{w|Thomas Malory}}, ''Le Morte Darthur'', Book III:
 #*: Merlyn warned the kynge couertly that gweneuer was not holsome for hym to take to wyf, for he warned hym that launcelot shold loue her and she hym '''ageyne''' {{...}}
 #*'''1603''', {{w|John Florio}}, translating Michel de Montaigne, ''Essays'', II.31:
-#*:So women are never angrie, but to the end a man should '''againe''' be angrie with them, thereby imitating the lawes of Love.
+#*:So women are never angrie, but to the end a man should '''againe''' be angrie with them, therein imitating the lawes of Love.
 #* '''1621''', {{w|Robert Burton}}, ''The Anatomy of Melancholy'', I.2.4.vii:
 #*: Thus men are plagued with women, they '''again''' with men, when they are of diverse humours and conditions [...].
 # Another time; once more. {{defdate|from 14th c.}}
